feature(backend): publish submissions endpoint and test.
